--- a/index.html
+++ b/index.html
@@ -3,285 +3,271 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Deann Thiel | Customer Support Professional</title>
-<meta name="description" content="Professional customer support and phone representative with 5+ years experience.">
+<title>Donna Stroupe | Sales Representative</title>
 
 <style>
 :root{
-  --bg:#0f172a;
-  --card:#111827;
-  --text:#e5e7eb;
-  --muted:#9ca3af;
-  --accent:#38bdf8;
-}
-[data-theme="light"]{
-  --bg:#f8fafc;
-  --card:#ffffff;
-  --text:#0f172a;
-  --muted:#475569;
-  --accent:#0284c7;
+  --beige:#e6dfda;
+  --dark:#1f1a17;
+  --text:#2b2b2b;
+  --muted:#6b6b6b;
 }
 
 *{box-sizing:border-box;margin:0;padding:0}
+
 body{
-  font-family:system-ui,-apple-system,Segoe UI,Roboto;
-  background:var(--bg);
+  font-family: "Segoe UI", system-ui, sans-serif;
+  background:#fff;
   color:var(--text);
   line-height:1.6;
 }
-a{text-decoration:none;color:inherit}
 
-.container{
-  max-width:1100px;
+.wrapper{
+  max-width:1200px;
   margin:auto;
-  padding:40px 20px;
-}
-
-/* NAV */
-nav{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  margin-bottom:60px;
-}
-nav h1{
-  font-size:22px;
-  font-weight:800;
-}
-nav button{
-  background:var(--card);
-  border:1px solid rgba(255,255,255,.1);
-  color:var(--text);
-  padding:8px 14px;
-  border-radius:8px;
-  cursor:pointer;
-}
-
-/* HERO */
-.hero{
   display:grid;
-  grid-template-columns:1.2fr .8fr;
-  gap:40px;
-  align-items:center;
-}
-.hero h2{
-  font-size:48px;
-  line-height:1.1;
-  margin-bottom:20px;
-}
-.hero p{
-  color:var(--muted);
-  font-size:18px;
-  margin-bottom:30px;
-}
-.hero .cta{
-  display:flex;
-  gap:16px;
-}
-.btn{
-  padding:14px 22px;
-  border-radius:10px;
-  font-weight:700;
-}
-.primary{
-  background:var(--accent);
-  color:#fff;
-}
-.secondary{
-  border:1px solid var(--accent);
-  color:var(--accent);
+  grid-template-columns: 340px 1fr;
+  min-height:100vh;
 }
 
-/* SECTIONS */
-section{
-  margin-top:100px;
-}
-section h3{
-  font-size:32px;
-  margin-bottom:20px;
-}
-section p{
-  color:var(--muted);
-  max-width:800px;
+/* LEFT SIDEBAR */
+.sidebar{
+  background:var(--beige);
+  padding:40px 30px;
 }
 
-/* SERVICES */
-.cards{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-  gap:20px;
-  margin-top:30px;
+.profile{
+  text-align:center;
+  margin-bottom:40px;
 }
-.card{
-  background:var(--card);
-  padding:26px;
-  border-radius:16px;
+.profile img{
+  width:160px;
+  height:160px;
+  border-radius:50%;
+  border:6px solid #fff;
+  object-fit:cover;
 }
-.card h4{
-  margin-bottom:10px;
-}
-
-/* EXPERIENCE */
-.exp{
-  margin-top:30px;
-}
-.exp-item{
-  border-left:3px solid var(--accent);
-  padding-left:20px;
-  margin-bottom:30px;
-}
-
-/* SKILLS */
-.skills{
-  display:flex;
-  flex-wrap:wrap;
-  gap:12px;
-  margin-top:20px;
-}
-.skill{
-  background:var(--card);
-  padding:10px 16px;
-  border-radius:999px;
-  font-weight:600;
+.profile h1{
+  display:none;
 }
 
 /* CONTACT */
 .contact{
-  text-align:center;
-  margin-top:120px;
+  margin-top:30px;
 }
-.contact a{
-  display:inline-block;
-  margin-top:20px;
-  background:var(--accent);
-  color:#fff;
-  padding:16px 30px;
-  border-radius:12px;
-  font-weight:800;
+.contact p{
+  font-size:14px;
+  margin-bottom:12px;
+  color:#333;
 }
 
-/* FOOTER */
-footer{
-  text-align:center;
-  margin-top:80px;
-  color:var(--muted);
+/* SECTION TITLE */
+.side-title{
+  margin-top:40px;
+  font-weight:800;
+  letter-spacing:2px;
+  font-size:15px;
+  border-bottom:2px solid #333;
+  padding-bottom:6px;
+  margin-bottom:18px;
+}
+
+/* LISTS */
+ul{
+  padding-left:18px;
+}
+li{
+  margin-bottom:8px;
   font-size:14px;
 }
 
+/* RIGHT CONTENT */
+.main{
+  padding:0;
+}
+
+/* HERO BAR */
+.hero{
+  background:var(--dark);
+  color:#fff;
+  padding:50px 60px;
+}
+.hero h2{
+  font-size:42px;
+  letter-spacing:2px;
+}
+.hero p{
+  margin-top:10px;
+  font-size:18px;
+  opacity:.9;
+}
+
+/* CONTENT */
+.content{
+  padding:50px 60px;
+}
+
+.section{
+  margin-bottom:50px;
+}
+.section h3{
+  font-size:22px;
+  margin-bottom:10px;
+}
+.section hr{
+  border:none;
+  border-bottom:1px solid #333;
+  margin-bottom:18px;
+}
+
+.section p{
+  font-size:15px;
+  color:var(--muted);
+}
+
+/* EXPERIENCE */
+.job{
+  margin-bottom:30px;
+}
+.job span{
+  font-size:14px;
+  color:var(--muted);
+}
+.job h4{
+  margin-top:6px;
+  font-size:17px;
+}
+
+/* REFERENCES */
+.refs{
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:30px;
+}
+.refs p{
+  font-size:14px;
+}
+
+/* RESPONSIVE */
 @media(max-width:900px){
-  .hero{
+  .wrapper{
     grid-template-columns:1fr;
   }
-  .hero h2{
-    font-size:38px;
+  .hero,.content{
+    padding:30px;
+  }
+  .sidebar{
+    text-align:center;
   }
 }
 </style>
 </head>
 
 <body>
-<div class="container" id="app">
 
-<nav>
-  <h1>Deann Thiel</h1>
-  <button onclick="toggleTheme()">🌙 Theme</button>
-</nav>
+<div class="wrapper">
 
-<section class="hero">
-  <div>
-    <h2>Customer Support<br>That Customers Trust</h2>
-    <p>
-      I’m a professional Phone & Customer Support Representative with 5+ years of experience
-      delivering fast, friendly, and effective solutions.
-    </p>
-    <div class="cta">
-      <a href="#contact" class="btn primary">Hire Me</a>
-      <a href="mailto:deannthiel@gmail.com" class="btn secondary">Email Me</a>
+  <!-- LEFT -->
+  <aside class="sidebar">
+    <div class="profile">
+      <!-- profile.jpg same folder e rakhben -->
+      <img src="profile.jpg" alt="Profile Photo"
+      onerror="this.style.display='none'">
     </div>
-  </div>
-  <div>
-    <img src="avatar.jpg" alt="Profile" style="width:100%;border-radius:20px;object-fit:cover"
-    onerror="this.style.display='none'">
-  </div>
-</section>
 
-<section>
-  <h3>About Me</h3>
-  <p>
-    I specialize in high-volume phone support, customer satisfaction, and problem resolution.
-    My approach focuses on empathy, accuracy, and clear communication to ensure
-    every customer interaction builds trust.
-  </p>
-</section>
-
-<section>
-  <h3>What I Do</h3>
-  <div class="cards">
-    <div class="card">
-      <h4>📞 Phone Support</h4>
-      <p>Handling high-volume inbound and outbound calls efficiently.</p>
+    <div class="contact">
+      <p>📧 hello@reallygreatsite.com</p>
+      <p>📞 +123-456-7890</p>
+      <p>📍 123 Anywhere St., Any City</p>
+      <p>🌐 reallygreatsite.com</p>
     </div>
-    <div class="card">
-      <h4>🛠 Problem Resolution</h4>
-      <p>Identifying issues quickly and delivering clear solutions.</p>
-    </div>
-    <div class="card">
-      <h4>🤝 Customer Experience</h4>
-      <p>Building positive, long-term customer relationships.</p>
-    </div>
-  </div>
-</section>
 
-<section>
-  <h3>Experience Highlights</h3>
-  <div class="exp">
-    <div class="exp-item">
-      <strong>Blanda-Hill</strong> — Phone Representative  
-      <br><small>2023 – Present</small>
-      <p>Managed high-volume calls, pricing inquiries, and technical support.</p>
+    <div class="side-title">EDUCATION</div>
+    <p><strong>BA Sales and Commerce</strong><br>Wardiere University<br>2016 – 2020</p>
+    <br>
+    <p><strong>Bachelor of Marketing</strong><br>Wardiere University<br>2020 – 2023</p>
+
+    <div class="side-title">SKILLS</div>
+    <ul>
+      <li>Sales Strategies</li>
+      <li>Negotiation Skills</li>
+      <li>Problem Solving</li>
+      <li>Time Management</li>
+      <li>Presentation Skills</li>
+      <li>Team Collaboration</li>
+    </ul>
+
+    <div class="side-title">LANGUAGE</div>
+    <p>English</p>
+    <p>French</p>
+  </aside>
+
+  <!-- RIGHT -->
+  <main class="main">
+    <div class="hero">
+      <h2>DONNA STROUPE</h2>
+      <p>Sales Representative</p>
     </div>
-    <div class="exp-item">
-      <strong>Muller, Hettinger & Bergstrom</strong>  
-      <br><small>2021 – 2023</small>
-      <p>Provided customer-focused solutions and follow-up support.</p>
+
+    <div class="content">
+
+      <section class="section">
+        <h3>About Me</h3>
+        <hr>
+        <p>
+          I am a Sales Representative who initiates and manages relationships
+          with customers. I serve as the primary contact from outreach to final
+          purchase, ensuring long-term business growth.
+        </p>
+      </section>
+
+      <section class="section">
+        <h3>Work Experience</h3>
+        <hr>
+
+        <div class="job">
+          <span>Jul 2020 – Aug 2023 · Arowwai Industries</span>
+          <h4>Consumer Goods Seller</h4>
+          <ul>
+            <li>Offered consumer goods packages to corporate clients</li>
+            <li>Met with clients quarterly to renew services</li>
+            <li>Trained junior sales agents</li>
+          </ul>
+        </div>
+
+        <div class="job">
+          <span>Jul 2015 – Aug 2020 · Timmerman Industries</span>
+          <h4>FMCG Sales Agent</h4>
+          <ul>
+            <li>Visited corporate clients to present latest products</li>
+            <li>Built long-term customer relationships</li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="section">
+        <h3>References</h3>
+        <hr>
+        <div class="refs">
+          <p>
+            <strong>Estelle Darcy</strong><br>
+            Wardiere Inc. / CEO<br>
+            📞 +123-456-7890<br>
+            ✉ hello@reallygreatsite.com
+          </p>
+          <p>
+            <strong>Harper Russo</strong><br>
+            Wardiere Inc. / CEO<br>
+            📞 +123-456-7890<br>
+            ✉ hello@reallygreatsite.com
+          </p>
+        </div>
+      </section>
+
     </div>
-  </div>
-</section>
-
-<section>
-  <h3>Skills</h3>
-  <div class="skills">
-    <span class="skill">Customer Service</span>
-    <span class="skill">Communication</span>
-    <span class="skill">Telephone Etiquette</span>
-    <span class="skill">Problem Solving</span>
-    <span class="skill">Listening Skills</span>
-    <span class="skill">Multitasking</span>
-  </div>
-</section>
-
-<section class="contact" id="contact">
-  <h3>Let’s Work Together</h3>
-  <p>Looking for a reliable customer support professional?</p>
-  <a href="mailto:deannthiel@gmail.com">Contact Me</a>
-</section>
-
-<footer>
-  © <span id="year"></span> Deann Thiel · Professional Website
-</footer>
+  </main>
 
 </div>
 
-<script>
-const app=document.getElementById("app");
-function toggleTheme(){
-  const t=app.getAttribute("data-theme")==="light"?"dark":"light";
-  app.setAttribute("data-theme",t);
-  localStorage.setItem("theme",t);
-}
-const saved=localStorage.getItem("theme");
-if(saved) app.setAttribute("data-theme",saved);
-document.getElementById("year").innerText=new Date().getFullYear();
-</script>
 </body>
 </html>
