--- a/index.html
+++ b/index.html
@@ -3,184 +3,238 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Deann Thiel – Customer Support Professional</title>
+<title>Donna Stroupe | Sales Representative</title>
 
 <style>
+*{box-sizing:border-box;margin:0;padding:0}
 body{
-  margin:0;
-  font-family:Arial, Helvetica, sans-serif;
-  background:#0f172a;
-  color:#e5e7eb;
+  font-family: "Segoe UI", Arial, sans-serif;
+  background:#e6dfda;
+  color:#222;
 }
-section{padding:80px 20px}
-.container{max-width:1100px;margin:auto}
 
-/* HERO */
-.hero{
-  display:flex;
-  align-items:center;
-  gap:50px;
+.wrapper{
+  max-width:1100px;
+  margin:40px auto;
+  background:#fff;
+  display:grid;
+  grid-template-columns:320px 1fr;
   min-height:100vh;
 }
-.hero img{
-  width:320px;
-  border-radius:20px;
+
+/* LEFT SIDEBAR */
+.sidebar{
+  background:#e6dfda;
+  padding:40px 30px;
 }
-.hero h1{
-  font-size:52px;
-  margin-bottom:20px;
+.profile-pic{
+  width:180px;
+  height:180px;
+  border-radius:50%;
+  border:8px solid #fff;
+  overflow:hidden;
+  margin:0 auto 30px;
 }
-.hero p{
-  font-size:18px;
-  color:#94a3b8;
-}
-.btn{
-  display:inline-block;
-  margin-top:30px;
-  padding:14px 28px;
-  background:#38bdf8;
-  color:#000;
-  border-radius:10px;
-  font-weight:bold;
+.profile-pic img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
 }
 
-/* SECTIONS */
-h2{
-  font-size:36px;
-  margin-bottom:20px;
+.contact p{
+  margin:12px 0;
+  font-size:14px;
 }
-p{color:#94a3b8;font-size:17px}
 
-/* SERVICES */
-.services{
+.section-title{
+  margin-top:40px;
+  font-weight:700;
+  letter-spacing:2px;
+  border-bottom:2px solid #333;
+  padding-bottom:6px;
+}
+
+.list{
+  margin-top:20px;
+}
+.list p, .list li{
+  font-size:14px;
+  margin-bottom:10px;
+}
+.list ul{
+  padding-left:18px;
+}
+
+/* RIGHT SIDE */
+.main{
+  padding:0;
+}
+
+/* HEADER */
+.header{
+  background:#1f1a17;
+  color:#fff;
+  padding:50px 50px;
+}
+.header h1{
+  font-size:38px;
+  letter-spacing:3px;
+}
+.header h2{
+  font-weight:300;
+  margin-top:10px;
+}
+
+/* CONTENT */
+.content{
+  padding:40px 50px;
+}
+.content h3{
+  margin-top:40px;
+  font-size:22px;
+  border-bottom:2px solid #333;
+  padding-bottom:8px;
+}
+.content p{
+  margin-top:20px;
+  font-size:15px;
+  line-height:1.7;
+}
+
+.job{
+  margin-top:25px;
+}
+.job strong{
+  display:block;
+  margin-bottom:6px;
+}
+.job ul{
+  padding-left:18px;
+  margin-top:8px;
+}
+.job li{
+  margin-bottom:6px;
+  font-size:14px;
+}
+
+.refs{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-  gap:20px;
+  grid-template-columns:1fr 1fr;
+  gap:30px;
+  margin-top:20px;
 }
-.card{
-  background:#111827;
-  padding:30px;
-  border-radius:16px;
-}
-
-/* EXPERIENCE */
-.exp{
-  border-left:4px solid #38bdf8;
-  padding-left:20px;
-  margin-bottom:30px;
-}
-
-/* SKILLS */
-.skills span{
-  display:inline-block;
-  margin:8px;
-  padding:10px 18px;
-  background:#111827;
-  border-radius:999px;
-}
-
-/* CONTACT */
-.contact{
-  text-align:center;
-  background:#020617;
-}
-
-footer{
-  text-align:center;
-  padding:30px;
-  color:#64748b;
+.refs p{
+  font-size:14px;
 }
 
 @media(max-width:900px){
-  .hero{flex-direction:column;text-align:center}
+  .wrapper{
+    grid-template-columns:1fr;
+  }
+  .header{
+    text-align:center;
+  }
 }
 </style>
 </head>
 
 <body>
 
-<!-- HERO -->
-<section class="hero container">
-  <div>
-    <h1>I Help Customers Feel Heard & Supported</h1>
-    <p>
-      Professional Phone & Customer Support Representative  
-      with 5+ years of real-world experience.
-    </p>
-    <a href="#contact" class="btn">Hire Me</a>
-  </div>
+<div class="wrapper">
 
-  <!-- 👉 এখানে ছবি বসবে -->
-  <img src="images/profile.jpg" alt="Deann Thiel">
-</section>
-
-<!-- ABOUT -->
-<section class="container">
-  <h2>About Me</h2>
-  <p>
-    I specialize in high-volume phone support, problem resolution,
-    and delivering calm, professional customer experiences.
-    My focus is always on clarity, empathy, and efficiency.
-  </p>
-</section>
-
-<!-- SERVICES -->
-<section class="container">
-  <h2>What I Do</h2>
-  <div class="services">
-    <div class="card">
-      <h3>📞 Phone Support</h3>
-      <p>Handling inbound & outbound customer calls professionally.</p>
+  <!-- LEFT -->
+  <aside class="sidebar">
+    <div class="profile-pic">
+      <img src="images/profile.jpg" alt="Profile Photo">
     </div>
-    <div class="card">
-      <h3>🛠 Issue Resolution</h3>
-      <p>Quick identification and solution of customer problems.</p>
+
+    <div class="contact">
+      <p>📧 hello@reallygreatsite.com</p>
+      <p>📞 +123-456-7890</p>
+      <p>📍 123 Anywhere St., Any City</p>
+      <p>🌐 reallygreatsite.com</p>
     </div>
-    <div class="card">
-      <h3>🤝 Customer Experience</h3>
-      <p>Creating trust and satisfaction with every interaction.</p>
+
+    <div class="section-title">EDUCATION</div>
+    <div class="list">
+      <p><strong>BA Sales and Commerce</strong><br>Wardiere University<br>2016–2020</p>
+      <p><strong>Bachelor of Marketing</strong><br>Wardiere University<br>2020–2023</p>
     </div>
-  </div>
-</section>
 
-<!-- EXPERIENCE -->
-<section class="container">
-  <h2>Experience</h2>
+    <div class="section-title">SKILLS</div>
+    <div class="list">
+      <ul>
+        <li>Sales Strategies</li>
+        <li>Negotiation Skills</li>
+        <li>Problem-Solving</li>
+        <li>Time Management</li>
+        <li>Presentation Skills</li>
+        <li>Team Collaboration</li>
+      </ul>
+    </div>
 
-  <div class="exp">
-    <strong>Blanda-Hill</strong> (2023–Present)
-    <p>High-volume phone support and technical assistance.</p>
-  </div>
+    <div class="section-title">LANGUAGE</div>
+    <div class="list">
+      <p>English</p>
+      <p>French</p>
+    </div>
+  </aside>
 
-  <div class="exp">
-    <strong>Muller, Hettinger & Bergstrom</strong> (2021–2023)
-    <p>Customer service, follow-ups, and satisfaction management.</p>
-  </div>
-</section>
+  <!-- RIGHT -->
+  <main class="main">
+    <div class="header">
+      <h1>DONNA STROUPE</h1>
+      <h2>Sales Representative</h2>
+    </div>
 
-<!-- SKILLS -->
-<section class="container">
-  <h2>Skills</h2>
-  <div class="skills">
-    <span>Customer Service</span>
-    <span>Communication</span>
-    <span>Problem Solving</span>
-    <span>Telephone Etiquette</span>
-    <span>Listening</span>
-    <span>Multitasking</span>
-  </div>
-</section>
+    <div class="content">
+      <h3>About Me</h3>
+      <p>
+        I am a Sales Representative who initiates and manages relationships with customers.
+        I serve as the point of contact from outreach through final purchase.
+      </p>
 
-<!-- CONTACT -->
-<section id="contact" class="contact">
-  <h2>Let’s Work Together</h2>
-  <p>Email me directly</p>
-  <a class="btn" href="mailto:deannthiel@gmail.com">deannthiel@gmail.com</a>
-</section>
+      <h3>Work Experience</h3>
 
-<footer>
-  © 2026 Deann Thiel · Professional Website
-</footer>
+      <div class="job">
+        <strong>Consumer Goods Seller — Arowwai Industries</strong>
+        <small>Jul 2020 – Aug 2023</small>
+        <ul>
+          <li>Offered consumer goods packages to corporate clients</li>
+          <li>Met clients quarterly to renew services</li>
+          <li>Trained junior sales agents</li>
+        </ul>
+      </div>
+
+      <div class="job">
+        <strong>FMCG Sales Agent — Timmerman Industries</strong>
+        <small>Jul 2015 – Aug 2020</small>
+        <ul>
+          <li>Visited corporate offices to promote products</li>
+          <li>Built long-term client relationships</li>
+        </ul>
+      </div>
+
+      <h3>References</h3>
+      <div class="refs">
+        <p>
+          <strong>Estelle Darcy</strong><br>
+          CEO, Wardiere Inc.<br>
+          Phone: +123-456-7890<br>
+          Email: hello@reallygreatsite.com
+        </p>
+        <p>
+          <strong>Harper Russo</strong><br>
+          CEO, Wardiere Inc.<br>
+          Phone: +123-456-7890<br>
+          Email: hello@reallygreatsite.com
+        </p>
+      </div>
+
+    </div>
+  </main>
+
+</div>
 
 </body>
 </html>
