--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ body{
   <!-- LEFT -->
   <aside class="sidebar">
     <div class="profile-pic">
-      <img src="images/profile.jpg" alt="Profile Photo">
+      <img src="https://i.ibb.co/FL0MVwJK/najmul.png" alt="Profile Photo">
     </div>
 
     <div class="contact">
