--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                  onerror="this.style.display='none'; this.parentElement.style.background='#cbb8ac';" />
           </div>
           <div>
-            <p class="pname">Donna Stroupe</p>
+            <p class="pname">MD Najmul Hassan</p>
             <p class="prole">Sales Representative</p>
           </div>
         </div>
