--- a/index.html
+++ b/index.html
@@ -347,12 +347,12 @@
           </div>
           <div>
             <p class="pname">MD Najmul Hassan</p>
-            <p class="prole">Sales Representative</p>
+            <p class="prole">Sales man</p>
           </div>
         </div>
 
         <div class="metrics">
-          <div class="metric"><b>5+ yrs</b><small>Experience</small></div>
+          <div class="metric"><b>4+ yrs</b><small>Experience</small></div>
           <div class="metric"><b>Fast</b><small>Response</small></div>
           <div class="metric"><b>High</b><small>Retention</small></div>
         </div>
@@ -481,7 +481,7 @@
   </section>
 
   <div class="footer">
-    © <span id="year"></span> Donna Stroupe · Professional Website
+    © <span id="year"></span> MD Najmul Hassan · Professional Website
   </div>
 
   <script>
