--- a/index.html
+++ b/index.html
@@ -294,6 +294,117 @@
       .contact{grid-template-columns:1fr}
       .contact .cta{justify-content:flex-start}
     }
+
+    /* =====================================
+   EXTRA MOBILE & DESKTOP FRIENDLY FIX
+   (NO DESIGN / CONTENT CHANGE)
+   ===================================== */
+
+/* Large desktop safety */
+@media (min-width: 1400px) {
+  .container {
+    max-width: 1200px;
+  }
+}
+
+/* Tablet */
+@media (max-width: 900px) {
+
+  .nav-inner {
+    flex-wrap: wrap;
+  }
+
+  .links {
+    width: 100%;
+    justify-content: flex-start;
+  }
+
+  .hero-grid {
+    grid-template-columns: 1fr;
+  }
+
+  .metrics {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .grid3,
+  .proof,
+  .quotes {
+    grid-template-columns: 1fr;
+  }
+
+  .contact {
+    grid-template-columns: 1fr;
+  }
+
+  .contact .cta {
+    justify-content: flex-start;
+  }
+}
+
+/* Mobile */
+@media (max-width: 600px) {
+
+  body {
+    overflow-x: hidden;
+  }
+
+  .container {
+    padding: 0 14px;
+  }
+
+  .nav-inner {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
+
+  .links {
+    flex-wrap: wrap;
+    gap: 6px;
+  }
+
+  h1 {
+    font-size: 30px;
+    line-height: 1.25;
+  }
+
+  .sub {
+    font-size: 14px;
+  }
+
+  .metrics {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .avatar {
+    width: 56px;
+    height: 56px;
+  }
+
+  .cta {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .btn {
+    width: 100%;
+    text-align: center;
+  }
+
+  .pill-row {
+    gap: 6px;
+  }
+
+  section {
+    padding: 42px 0;
+  }
+
+  .footer {
+    padding-bottom: 30px;
+  }
+}
+
   </style>
 </head>
 
